--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "eject": "react-scripts eject",
     "lint": " eslint \"src/**/*.+(js|ts|jsx|tsx)\" ",
     "format": " prettier --write \"src/**/*.+(js|ts|jsx|tsx)\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-git"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +57,10 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "husky": "^9.0.11",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "@commitlint/config-conventional": "19.2.2",
+    "commitizen": "4.3.0",
+    "conventional-changelog-conventionalcommits": "8.0.0",
+    "cz-git": "1.9.2"
   }
 }
