--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.17.4",
+    "craco-less": "^3.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,16 +54,16 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "19.2.2",
     "@craco/craco": "^7.1.0",
+    "commitizen": "4.3.0",
+    "conventional-changelog-conventionalcommits": "8.0.0",
+    "cz-git": "1.9.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "@commitlint/config-conventional": "19.2.2",
-    "commitizen": "4.3.0",
-    "conventional-changelog-conventionalcommits": "8.0.0",
-    "cz-git": "1.9.2"
+    "prettier": "^3.2.5"
   }
 }
