--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ahooks": "^3.8.0",
     "antd": "^5.17.4",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
